<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">易宝金融</string>
    <string name="login">登录</string>
    <string name="me">我的账户</string>
    <string name="invest">理财投资</string>
    <string name="daily_increase">天天盈</string>
    <string name="setting">设置</string>
    <string name="net_error">请求异常，服务端未响应</string>
    <string name="format_error">输入金额格式错误</string>
    <string name="no_msg">暂无信息</string>
    <string name="setting_msg">关闭后您将无法再接收到提现到账、项目还款等信息，建议开启。</string>
    <string name="instruction">"        "易宝金融成立于2013年，隶属于国内知名互联网
        金融企业易宝集团旗下，为广大机构、企业与个人投
        资者提供“安全、专业、便捷”的综合性金融资产交易
        相关服务及投融资顾问服务，实现投资者的财富梦想。</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="please_add_bankcard_at_first">请先添加银行卡</string>
    <string name="search_recharge_result_unknow">银行接口繁忙，正在继续为您充值，请关注余额变动</string>
    <string name="search_recharge_result_success">充值成功</string>
    <string name="search_recharge_result_fail">充值失败</string>
    <string name="pay_by_card_instruction_one">•　刷卡充值是易宝金融新推出的一种充值方式；</string>
    <string name="pay_by_card_instruction_two">•　刷卡充值通过手机蓝牙连接刷卡器，连接成功后可以使用
        国内主流银行的借记卡、贷记卡刷卡充值.</string>
    <string name="pay_by_card_instruction_three">•　单笔充值最低10元，单卡单笔充值上限5万元，单卡单日充值上限15万元；</string>
    <string name="add_bank_warn">•  为保证资金安全，绑定快捷支付银行卡成功后，将只能通过快捷卡提现</string>

    <!--快刷需要-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg_load_ing">加载中...</string>

    <!--通知页面-->
    <string name="new_project_push">开启后，当有新项目发布时，将会通知你（不包括
        天天盈、新手项目。)</string>
    <string name="withdraw_purcharge_push">您可以设置是否需要在每次充值、提现成功或者失败后获得通知。</string>
    <string name="invest_repay_push">开启后，当你已投资的项目结标、还款时，将会通知你。</string>
    <string name="add_invest_tick_push">开启后，当有新增投资券时，将会通知你。</string>

    <string-array name="item_text">
        <item>项目详情</item>
        <item>投资列表</item>
        <item>还款记录</item>
    </string-array>
    <string-array name="item_text1">
        <item>项目详情</item>
        <item>投资列表</item>
    </string-array>
    <string-array name="item_text_trans">
        <item>项目详情</item>
        <item>投资还款计划</item>
    </string-array>
    <string-array name="investment_record_item_text">
        <item>待结标</item>
        <item>还款中</item>
        <item>已还款</item>
    </string-array>
    <!--资金流水-->
    <string-array name="running_account">
        <item>充值</item>
        <item>提现</item>
    </string-array>

    <string-array name="server_url">
        <item>http://app.yeepbank.xyz</item>
        <item>http://test.app.yeepbank.xyz</item>
        <item>http://app.yeepbank.com</item>
    </string-array>

    <!--接收通知设置-->
    <string name="ACCESS_ALL">accept_all</string><!--总开关-->
    <string name="ACCESS_NEW_PROJECT">accept_new_project</string><!--新项目-->
    <string name="ACCESS_DEPOSIT">accept_deposit</string><!--充值提现-->
    <string name="ACCESS_BIDDING">accept_bidding</string><!--投资相关-->
    <string name="ACCESS_GRANT_COUPON">accept_grant_coupon</string><!--投资券-->
</resources>
